[tool.poetry]
name = "cloud-qualibrate-link"
version = "0.1.0"
description = "A tool to link Qualibrate experiment data to cloud storage"
readme = "README.md"
authors = ["Omrie Ovdat <omrie.ovdat@quantum-machines.co>"]
packages = [
    { include = "cloud_qualibrate_link" }
]
repository = "https://github.com/i-qcc/cloud_qualibrate_link"
keywords = ["quantum", "calibration", "cloud", "qualibrate"]

[tool.poetry.dependencies]
python = ">=3.12"
pathlib = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
isort = ">=5.0.0"
flake8 = ">=6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3